取得、更新使用者，登出、內部更換密碼、忘記密碼重置（email需再設定）

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,7 @@ provider:
     DB: ${self:custom.secret.DB}
     JWT_SECRET: ${self:custom.secret.JWT_SECRET}
     COOKIEEXPIRE: ${self:custom.secret.COOKIEEXPIRE}
+    SEND_GRID_API_KEY: ${self:custom.secret.SEND_GRID_API_KEY}
     
 functions:
   app:
