--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "google-auth-library": "^5.6.1",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
