--- a/serverless.yml
+++ b/serverless.yml
@@ -1,3 +1,6 @@
+# tokyo ap-northeast-1
+# us us-east-1
+
 service: sls-accessory
 
 custom: 
@@ -7,7 +10,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   stage: ${self:custom.secret.STAGE}
-  region: us-east-1
+  region: ap-northeast-1
   environment: 
     STAGE: ${self:custom.secret.STAGE}
     DB: ${self:custom.secret.DB}
